welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: value ==- is not a member of Int
			else if (nums(x)==2&&nums(x+1)==7&&((nums(x+2)==3||nums(x+2)==2||nums(x+2)==1||nums(x+2)==-1))) i=true
                                                                                                                ^